# trace-topology

./: .gitignore  AGENTS.md  DESIGN_NOTES.md  DEVELOPER_CHECKLIST.md  Makefile  README.md  REFERENCES.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  annotation_schema.json  assist_annotate.py  harvest.py
data/samples/: break_lab_recursive_mess_0001.json  break_lab_recursive_mess_0001.txt  deepseek-r1-8b_circular_closed_loop_20260402.json  deepseek-r1-8b_circular_closed_loop_20260402.txt  deepseek-r1-8b_circular_free_will_20260402.json  deepseek-r1-8b_circular_free_will_20260402.txt  deepseek-r1-8b_circular_trust_20260402.json  deepseek-r1-8b_circular_trust_20260402.txt  deepseek-r1-8b_self_correction_handshake_20260402.json  deepseek-r1-8b_self_correction_handshake_20260402.txt  deepseek-r1-8b_self_correction_probability_20260402.json  deepseek-r1-8b_self_correction_probability_20260402.txt  llama3.1-8b_circular_closed_loop_20260402.json  llama3.1-8b_circular_closed_loop_20260402.txt  llama3.1-8b_circular_free_will_20260402.json  llama3.1-8b_circular_free_will_20260402.txt  llama3.1-8b_circular_trust_20260402.json  llama3.1-8b_circular_trust_20260402.txt  llama3.1-8b_self_correction_handshake_20260402.json  (+45 more)
docs/: ARTIFACT_CONTRACT.md  FIRST_DEBUG_SESSION.md
src/trace_topology/: __init__.py  (+9 more)
tests/: conftest.py  test_analysis.py  test_artifacts.py  test_backends.py  test_cli.py  test_data_quality.py  test_detectors.py  test_eval.py  test_graph.py  test_harvest.py  test_packaging.py  test_parser.py  test_readme_examples.py  test_render.py
(+31 files in other folders)
