[project]
name = "trace-topology"
version = "0.1.0"
description = "Post-hoc debugger for LLM reasoning trace topology."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "requests>=2.32.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.57.1"]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
]

[project.scripts]
tt = "trace_topology.cli:cli"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
